# synple-utils

./: .gitignore  Makefile  README.md  environment.yaml  pyproject.toml
.github/workflows/: python-app.yml
bash-utils/: queueligprep  queueqikprop
data/: data_230907.csv
notebooks/: demo_230907.ipynb  demo_230928.ipynb
scripts/: install_precommit.sh
scripts/schrodinger-utils/: queueligprep  queueqikprop
src/synutils/: cleaners.py  dimension_pickers.py  enum_logger.py  featurizers.py  helpers.py  main.py  path.py  plotters.py  similarity_search.py
tests/: conftest.py  test_dimension_pickers.py  test_featurizers.py  test_similarity_search.py
tests/resource/: hit_candidates.csv  small_lib.csv
