[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "synutils"
authors = [
    {name = "Oh-hyeon Choung", email = "ohhyeon.choung@gmail.com"},
]
description = "SynpleChem utility functions"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "synutils.__version__"}


[options.packages.find]
where="src"
